--- a/visualizer/public/index.html
+++ b/visualizer/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/images/sorting.png" />
+    <link rel="icon" href="./sorting.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
